--- a/.github/workflows/_ascend_npu_benchmark.yml
+++ b/.github/workflows/_ascend_npu_benchmark.yml
@@ -105,7 +105,7 @@ jobs:
         id: list-torch-version
         shell: bash
         run: |
-          torch_version=$(python -c "import torch; print(torch.__version__)")
+          torch_version=$(python -c "from importlib.metadata import version;print(version('torch'))")
           echo "torch-version=${torch_version}" >> $GITHUB_OUTPUT
 
       - name: Install benchmark dependencies
