--- a/.github/workflows/create_image.yml
+++ b/.github/workflows/create_image.yml
@@ -26,7 +26,7 @@ concurrency:
 jobs:
   build:
     name: Build image
-    runs-on: ${{ inputs.runner }} || ubuntu-24.04
+    runs-on: ${{ inputs.runner  || 'ubuntu-24.04' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
