--- a/.github/workflows/ort-pypi.yaml
+++ b/.github/workflows/ort-pypi.yaml
@@ -26,6 +26,7 @@ jobs:
 
       - id: get_tag
         run: |
+          whoami
           last=$(cat /home/last_tag.txt)
           echo "last_tag=$last" >> $GITHUB_OUTPUT
 
