--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -1,4 +1,4 @@
-name: Roll
+name: Roll test
 
 on:
   workflow_dispatch:
@@ -29,11 +29,12 @@ concurrency:
 
 jobs:
   roll:
+    name: Run ROLL with CANN container
     runs-on: ${{ inputs.runner }}
     container:
       image: ascendai/cann:8.2.rc1-910b-ubuntu22.04-py3.11
-    env:
-      HF_ENDPOINT: https://hf-mirror.com
+      env:
+        HF_ENDPOINT: https://hf-mirror.com
 
     steps:
       - name: Show NPU info
