--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -30,7 +30,7 @@ concurrency:
 jobs:
   roll:
     name: Run ROLL with CANN container
-    runs-on: ${{ inputs.runner }}
+    runs-on: ${{ inputs.runner || 'linux-arm64-npu-1' }}
     container:
       image: ascendai/cann:8.2.rc1-910b-ubuntu22.04-py3.11
       env:
