--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           pip install torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cpu
           pip install torch_npu==2.5.1
-          pip install transformers==4.52.4 huggingface_hub==0.18.1 sentencepiece==0.1.99
+          pip install transformers==4.52.4 huggingface_hub sentencepiece
 
       - name: Checkout vllm
         uses: actions/checkout@v4
