--- a/.github/workflows/create_image.yml
+++ b/.github/workflows/create_image.yml
@@ -1,13 +1,11 @@
 name: create_image
 
 on:
-  push:
-    branches:
-      - llamacpp
-    paths:
-      - '.github/workflows/create_image.yml'
-      - 'requirements/**'
-      - 'docker/llamacpp-310p.Dockerfile'
+  workflow_dispatch:
+    inputs:
+      dockerfile:
+        required: true
+        description: "The Dockerfile to build the image"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -15,7 +13,7 @@ concurrency:
 
 jobs:
   build:
-    name: Build and push llama.cpp image
+    name: Build image
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
@@ -23,8 +21,10 @@ jobs:
 
       - name: build image
         run: |
-            IMAGE_NAME=llamacpp-310p:latest
-            docker build -t $IMAGE_NAME -f docker/llamacpp-310p.Dockerfile .
-            echo $IMAGE_NAME > image_name.txt
-            
+            ImageName= ${{ inputs.dockerfile }}
+            docker build -t $ImageName -f docker/$ImageName .
+            docker images | grep $ImageName
+            docker run --rm $ImageName npu-smi info
+            docker run --rm $ImageName python3 -c "import torch; import torch_npu; print(torch.__version__); print(torch_npu.__version__)"
+
 
