--- a/.github/workflows/ascend_npu-test.yml
+++ b/.github/workflows/ascend_npu-test.yml
@@ -9,7 +9,7 @@ on:
       - ".github/workflows/_ascend_npu_build_torch.yml"
       - ".github/workflows/_ascend_npu_build_torch_npu.yml"
       - ".github/workflows/_ascend_npu_ut.yml"
-      # - ".github/workflows/_ascend_npu_benchmark.yml"
+      - ".github/workflows/_ascend_npu_torchtitan.yml"
       - ".github/workflows/_ascend_npu_torchtune.yml"
       - ".ci/**"
       - "ascend_npu/**"
@@ -23,7 +23,7 @@ on:
       - ".github/workflows/_ascend_npu_build_torch.yml"
       - ".github/workflows/_ascend_npu_build_torch_npu.yml"
       - ".github/workflows/_ascend_npu_ut.yml"
-      # - ".github/workflows/_ascend_npu_benchmark.yml"
+      - ".github/workflows/_ascend_npu_torchtitan.yml"
       - ".github/workflows/_ascend_npu_torchtune.yml"
       - ".ci/**"
       - "ascend_npu/**"
@@ -135,25 +135,6 @@ jobs:
       torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
       torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
 
-  # benchmark:
-  #   name: Run benchmarks
-  #   needs:
-  #     - prepare
-  #     - build-torch
-  #     - build
-  #     - test
-  #   if: |
-  #     !cancelled() && github.event_name != 'repository_dispatch' &&
-  #     (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
-  #   uses: ./.github/workflows/_ascend_npu_benchmark.yml
-  #   with:
-  #     runner: ${{ needs.prepare.outputs.runner }}
-  #     image: ${{ needs.prepare.outputs.image }}
-  #     torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
-  #     torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
-  #   secrets:
-  #     pr-token: ${{ secrets.COSDT_BOT_TOKEN }}
-
   torchtune:
     name: Run torchtune for torch_npu
     needs:
@@ -171,3 +152,20 @@ jobs:
       torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
     secrets:
       hf_token: ${{ secrets.HF_TOKEN }}
+
+
+  torchtitan:
+    name: Run torchtitan
+    needs:
+      - prepare
+      - build-torch
+      - build
+    if: |
+      !cancelled() && github.event_name != 'repository_dispatch' &&
+      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
+    uses: ./.github/workflows/_ascend_npu_torchtitan.yml
+    with:
+      runner: ${{ needs.prepare.outputs.runner }}
+      image: ${{ needs.prepare.outputs.image }}
+      torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
+      torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
