--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -48,13 +48,17 @@ jobs:
           sed -i 's|ports.ubuntu.com|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
           pip config set global.index-url https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple
 
+      - name : Set up conda
+        run: |
+          conda create -n py310 python=3.10 -y
+          conda activate py310
+
       - name: Install system dependencies
         run: |
           apt-get update
           apt-get install -y \
             git gcc g++ make cmake ninja-build curl \
             libgl1 libglib2.0-0 libsndfile1 libcurl4-openssl-dev unzip \
-            python3.10 python3.10-dev python3.10-venv
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -64,11 +68,6 @@ jobs:
         with:
           repository: alibaba/ROLL
           path: ROLL
-
-      - name: Setup Python 3.10 venv
-        run: |
-          python3.10 -m venv vllm-env
-          source vllm-env/bin/activate
 
       - name: Install dependencies
         run: |
