--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -48,6 +48,13 @@ jobs:
           sed -i 's|ports.ubuntu.com|mirrors.tuna.tsinghua.edu.cn|g' /etc/apt/sources.list
           pip config set global.index-url https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple
 
+      - name: Install system dependencies
+        run: |
+          apt-get update
+          apt-get install -y \
+            git gcc g++ make cmake ninja-build curl wget\
+            libgl1 libglib2.0-0 libsndfile1 libcurl4-openssl-dev unzip \
+
       - name : Install conda
         run: |
           mkdir -p ~/miniconda3
@@ -59,13 +66,6 @@ jobs:
         run: |
           conda create -n py310 python=3.10 -y
           conda activate py310
-
-      - name: Install system dependencies
-        run: |
-          apt-get update
-          apt-get install -y \
-            git gcc g++ make cmake ninja-build curl \
-            libgl1 libglib2.0-0 libsndfile1 libcurl4-openssl-dev unzip \
 
       - name: Checkout
         uses: actions/checkout@v4
