--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -64,9 +64,10 @@ jobs:
 
       - name : Set up conda
         run: |
-          bash -c "bash ~/miniconda3/etc/profile.d/conda.sh && conda init"
+          source ~/miniconda3/etc/profile.d/conda.sh
           conda create -n py310 python=3.10 -y
           conda activate py310
+        shell: bash
 
       - name: Checkout
         uses: actions/checkout@v4
