--- a/.github/workflows/roll.yml
+++ b/.github/workflows/roll.yml
@@ -73,8 +73,8 @@ jobs:
           pip install "pybind11>=2.10,<3"
           python3 -m pybind11 --cmake
 
-          pip install torch==2.5.1 torchvision==0.20.1 torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cpu
-          pip install torch_npu==2.5.1rc1
+          pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 --index-url https://download.pytorch.org/whl/cpu
+          pip install torch_npu==2.6.0
           pip install transformers==4.52.4 huggingface_hub sentencepiece
 
       - name: Checkout vllm
