--- a/.github/workflows/create_image.yml
+++ b/.github/workflows/create_image.yml
@@ -6,6 +6,18 @@ on:
       dockerfilename:
         required: true
         description: "The Dockerfile to build the image"
+      runner:
+        required: true
+        description: "The runner to run on"
+        default: "ubuntu-24.04"
+        type: choice
+        options:
+          - ubuntu-24.04
+          - linux-arm64-npu-1
+          - linux-arm64-npu-2
+          - linux-arm64-npu-4
+          - linux-aarch64-310p-1
+          - linux-aarch64-310p-2
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -14,7 +26,7 @@ concurrency:
 jobs:
   build:
     name: Build image
-    runs-on: linux-arm64-npu-1
+    runs-on: ${{ inputs.runner }} || ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
