--- a/.github/workflows/pytorch_lable_check.yml
+++ b/.github/workflows/pytorch_lable_check.yml
@@ -35,6 +35,7 @@ jobs:
     outputs:
       runner: ${{ steps.set.outputs.runner }}
       images: ${{ steps.set.outputs.images }}
+      pr_numbers: ${{ steps.set_matrix.outputs.pr_numbers }}
     steps:
       - name: Set outputs
         id: set
@@ -67,11 +68,12 @@ jobs:
         run: cat matched.json
 
       - name: Set matrix for parallel PR checkout
-        id: set-matrix
+        id: set_matrix
         run: |
             pr_numbers=$(jq -r '.[] | .number' matched.json)
             matrix_prs=$(echo $pr_numbers | sed 's/ /,/g')  # Convert PR numbers to a comma-separated list
             echo "matrix_prs=$matrix_prs" >> $GITHUB_ENV
+            echo "pr_numbers=$matrix_prs" >> $GITHUB_OUTPUT  # Output the variable for later use
 
   # Define a separate job for each PR number
   check_pr:
@@ -81,7 +83,7 @@ jobs:
       image: ${{ needs.prepare.outputs.image }}
     strategy:
       matrix:
-        pr_number: [${{ env.matrix_prs }}]  # Using the matrix for parallel execution
+        pr_number: ${{ fromJson(needs.prepare.outputs.pr_numbers) }}   # Using the matrix for parallel execution
     steps:
       - name: Checkout code for PR
         uses: actions/checkout@v4
