--- a/.github/workflows/pytorch_label_check.yml
+++ b/.github/workflows/pytorch_label_check.yml
@@ -70,10 +70,11 @@ jobs:
         run: |
             pr_numbers=$(jq -r '.[] | .number' matched.json)
             matrix_prs=$(echo $pr_numbers | sed 's/ /,/g')  # Convert PR numbers to a comma-separated list
+            matrix_prs=$(jq '[.[].number]' matched.json)
             echo "found_prs=$pr_numbers"
             echo "matrix_prs=$matrix_prs"
             echo "matrix_prs=$matrix_prs" >> $GITHUB_ENV
-            echo "pr_numbers=$pr_numbers" >> $GITHUB_OUTPUT  # Output the variable for later use
+            echo "pr_numbers=$matrix_prs" >> $GITHUB_OUTPUT  # Output the variable for later use
 
   # Define a separate job for each PR number
   check_pr:
