--- a/.github/workflows/pytorch_label_check.yml
+++ b/.github/workflows/pytorch_label_check.yml
@@ -51,12 +51,9 @@ jobs:
         id: get_prs
         run: |
             prs=$(curl -s -H "Authorization: token ${{ secrets.COSDT_BOT_TOKEN }}" \
-            https://api.github.com/repos/pytorch/pytorch/pulls?state=open)
-            echo "$prs" > prs.json
-            cat prs.json
-
-            matched=$(jq '[.[] | select(.labels[]?.name=="module: PrivateUse1")]' prs.json)
-            echo "$matched" > matched.json
+              "https://api.github.com/search/issues?q=is:pr+is:open+repo:pytorch/pytorch+label:\"module: PrivateUse1\"")
+            echo "$prs" > matched.json
+            cat matched.json
 
             count=$(jq 'length' matched.json)
             echo "found=$count" >> $GITHUB_OUTPUT
