--- a/.github/workflows/pytorch_label_check.yml
+++ b/.github/workflows/pytorch_label_check.yml
@@ -50,15 +50,13 @@ jobs:
       - name: Get open PRs from B repo
         id: get_prs
         run: |
-            prs=$(curl -s -H "Authorization: token $TOKEN" \
+            prs=$(curl -s -H "Authorization: token ${{ secrets.COSDT_BOT_TOKEN }}" \
               "https://api.github.com/search/issues?q=is:pr+is:open+repo:pytorch/pytorch+label:\"module:%20PrivateUse1\"")
             echo "$prs" > matched.json
             cat matched.json
 
             count=$(jq 'length' matched.json)
             echo "found=$count" >> $GITHUB_OUTPUT
-        env:
-          TOKEN: ${{ secrets.COSDT_BOT_TOKEN }}
 
       - name: Show matched PRs
         if: steps.get_prs.outputs.found != '0'
@@ -81,6 +79,7 @@ jobs:
   # Define a separate job for each PR number
   check_pr:
     needs: prepare
+    environment: Ascend
     runs-on:  ${{ needs.prepare.outputs.runner }}
     container:
       image: ${{ needs.prepare.outputs.images }}
@@ -110,23 +109,18 @@ jobs:
             "https://github.com/$head_repo.git" pr-code-$pr_number
             ls -al pr-code-$pr_number
 
-      - name: Test PR code
+      - name: Install dependencies
+        working-directory: pr-code-${{ matrix.pr_number }}
+        run: |
+            python -mpip install -r requirements.txt
+            export TORCH_SERIALIZATION_DEBUG=1
+            python -mpip install --no-input -r requirements.txt
+            pip install torch_npu==2.6.0 torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
+      - name: Run tests
         id: build
         working-directory: pr-code-${{ matrix.pr_number }}
         run: |
-            # Install dependencies
-            python -mpip install -r requirements.txt
-
-            # enable debug asserts in serialization
-            export TORCH_SERIALIZATION_DEBUG=1
-
-            python -mpip install --no-input -r requirements.txt
-
-            pip install torch_npu==2.6.0 torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-
-            echo "Ninja version: $(ninja --version)"
-            echo "Python version: $(which python) ($(python --version))"
-
             python test/run_test.py --verbose --exclude-jit-executor
         continue-on-error: true
       
