--- a/.github/workflows/torchao.yml
+++ b/.github/workflows/torchao.yml
@@ -69,7 +69,7 @@ jobs:
     name: Run unit tests with TorchAO
     runs-on: ${{ needs.prepare.outputs.runner }}
     container:
-      image: ascendai/cann:latest
+      image: swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:latest
       options: >-
         --network host
         --device ${{ needs.prepare.outputs.device }}
