--- a/.github/workflows/torchao.yml
+++ b/.github/workflows/torchao.yml
@@ -95,6 +95,7 @@ jobs:
       - name: Install dependencies 
         run: |
           pip install \
+              wheel setuptools \
               torch==2.7.1 \
               torch_npu==2.7.1rc1 \
               torchvision \
