--- a/.github/workflows/pytorch_label_check.yml
+++ b/.github/workflows/pytorch_label_check.yml
@@ -47,11 +47,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Get open PRs from B repo
+      - name: Get open PRs from repo
         id: get_prs
         run: |
-            prs=$(curl -s -H "Authorization: token ${{ secrets.COSDT_BOT_TOKEN }}" \
-              "https://api.github.com/search/issues?q=is:pr+is:open+repo:pytorch/pytorch+label:\"module:%20PrivateUse1\"")
+            url=$("https://api.github.com/search/issues?q=is:pr+is:open+repo:pytorch/pytorch+label:\"module:%20PrivateUse1\"")
+            prs=$(curl -s -H "Authorization: token ${{ secrets.COSDT_BOT_TOKEN }}" $url)
             echo "$prs" > matched.json
             cat matched.json
 
@@ -118,14 +118,14 @@ jobs:
             pip install torch_npu==2.6.0 torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
       - name: Run tests
-        id: build
+        id: test
         working-directory: pr-code-${{ matrix.pr_number }}
         run: |
             python test/run_test.py --verbose --exclude-jit-executor
         continue-on-error: true
-      
+
       - name: Create GitHub Issue on Failure
-        if: steps.build.outcome == 'failure'
+        if: steps.test.outcome == 'failure'
         uses: JasonEtco/create-an-issue@v2
         with:
           token: ${{ secrets.COSDT_BOT_TOKEN }}
